--- a/src/app/views/account/inquiries/view/view.html
+++ b/src/app/views/account/inquiries/view/view.html
@@ -1,5 +1,6 @@
 <div class="loader-div" loader>
-    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
 </div>
 <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;">
     <div class="guest-reviews single-conversation">
