--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -1,6 +1,7 @@
 <div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
 	<div class="loader-div" loader>
-	    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+	    <img src="assets/images/loader.gif" />
+	    <p>Excavating Awesomeness</p>
 	</div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 		<h1 class="no-margin black-color seller-heading-font">Favorites</h1>
