--- a/src/app/views/seller-account/equipments/add/add.html
+++ b/src/app/views/seller-account/equipments/add/add.html
@@ -1,5 +1,6 @@
 <div class="loader-div" loader>
-    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
 </div>
 <div class="add-equipment col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding add-equip-col">
 	<form validate-form name="addEquiMdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form buyer-add-jobsite">
