--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -1,5 +1,6 @@
 <div class="loader-div" loader>
-    <img src="assets/images/loader.gif" style="height: 40px; width:40px"/>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
 </div>
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header no-padding">
 		<h1 class="no-margin black-color seller-heading-font">My Equipments
