--- a/src/app/views/seller-account/settings/general/general.html
+++ b/src/app/views/seller-account/settings/general/general.html
@@ -1,5 +1,6 @@
 <div class="loader-div setting-loader" loader>
-    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 	<form novalidate name="generalMdl.form" validate-form class="general-setting">
