--- a/src/app/views/seller-account/settings/shipping/shipping.html
+++ b/src/app/views/seller-account/settings/shipping/shipping.html
@@ -1,5 +1,6 @@
 <div class="loader-div setting-loader" loader>
-    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
 </div>
 <h5 class="skin-color">Standard Method</h5>
 <div class="row form-group no-bmargin hidden-xs hidden-sm">
