--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -1,5 +1,8 @@
-
-<div class="row" load-indicator>
+<div class="loaderDiv" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
+<div class="row">
 <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
     <div id="hotel-main-content" class="tab-container style1">
         <ul class="tabs">
