--- a/src/app/views/payment/payment.html
+++ b/src/app/views/payment/payment.html
@@ -1,3 +1,7 @@
+<div class="loaderDiv" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
 <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 no-padding">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col">
 						<ul class="progress-indicator">
