--- a/src/app/views/search/search.html
+++ b/src/app/views/search/search.html
@@ -1,3 +1,7 @@
+<div class="loaderDiv" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
 <div style="margin-top: 20px;">
 <div class="row">
     <div class="col-xs-12 visible-xs search-menu">
@@ -188,9 +192,10 @@
         </div>
     </div>
 
-  <div class="loaderDiv" loader>
+ <!--  <div class="loaderDiv" loader>
     <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
-  </div>
+    <p>Excavating Awesomeness</p>
+  </div> -->
       <a ng-click="searchMdl.next()" class="uppercase full-width button btn-large" ng-show="searchMdl.nextAvailable && searchMdl.products.length">
           <span ng-hide="searchMdl.working" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
           load more listing
