--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -1,3 +1,7 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
 <div id="dashboard" class="tab-pane fade in active col-padding-small col-padding-sm">
 	<h1 class="no-margin black-color seller-heading-font">Hi {{ user.fullname }}, Welcome to your Seller Dashboard!</h1>
 	<p>All your seller profile and setting will appear here and you'll be able to manage everything!</p>
