--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -59,6 +59,10 @@
 		<a class="button dark-blue1 btn-large uppercase pull-left">Continue Renting Equipments</a>
 		<div class="tour-google-map block"></div>
 </div> -->
+<div class="loaderDiv" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
 	<div class="row">
 		<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 cart-button cart-heading">
