--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -259,6 +259,10 @@
 				</div>
 		</div>
 </div> -->
+<div class="loaderDiv" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
 <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 no-padding">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col col-padding-small">
 		<ul class="progress-indicator">
