--- a/src/app/views/seller-account/orders/process/process.html
+++ b/src/app/views/seller-account/orders/process/process.html
@@ -1,83 +1,111 @@
 <div class="loader-div" loader>
-    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+	<img src="assets/images/loader.gif"/>
+	<p>Excavating Awesomeness</p>
 </div>
-<h2>Process Order</h2>
-<ul class="progress-indicator">
-    <li ng-class="{'completed':mdl.currentStatusIndex>=1}">
-        <span class="bubble"></span>
-        <i class="fa fa-check-circle"></i>
-        Confirmed<br/>
-        <small class="select-color">21 Aug, 2015 03:44:44</small>
-    </li>
-    <li ng-class="{'completed':mdl.currentStatusIndex>=2}">
-        <span class="bubble"></span>
-        <i class="fa fa-check-circle"></i>
-        Approved<br/>
-        <small class="select-color">21 Aug, 2015 03:44:44</small>
-    </li>
-    <li ng-class="{'completed':mdl.currentStatusIndex>=4}">
-        <span class="bubble"></span>
-        <i class="fa fa-check-circle"></i>
-        Ready to Ship
-    </li>
-    <li ng-class="{'completed':mdl.currentStatusIndex>=6}">
-        <span class="bubble"></span>
-        <i class="fa fa-check-circle"></i>
-        Dispatched
-    </li>
-    <li ng-class="{'completed':mdl.currentStatusIndex>=7}">
-        <span class="bubble"></span>
-        <i class="fa fa-check-circle"></i>
-        Delivered
-    </li>
-    <li ng-class="{'completed':mdl.currentStatusIndex>=8}">
-        <span class="bubble"></span>
-        <i class="fa fa-check-circle"></i>
-        End Contract
-    </li>
-</ul>
-<h3><label>Current Status:</label><span>{{mdl.item.current_status}}</span></h3>
-<div class="row">
-    <div class="col-md-6">
-
-        <form ng-show="mdl.item.current_status!='cancelled'">
-            <div class="row form-group" style="margin-top: 40px;">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Change Order Status</label>
-                    <div class="selector">
-                        <select name="select-product" ng-model="mdl.changedStatus" class="full-width" ng-options="opt as opt.text for opt in mdl.statusOptions">
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <br/>
-            <div class="row form-group" style="margin-top: 40px;">
-                <div class="col-sms-6 col-sm-6">
-                    <textarea rows="10" cols="53" ng-model="mdl.comment" placeholder="Update user with your message here"></textarea>
-                </div>
-            </div>
-
-            <button ladda="buttonLoader" ng-click="mdl.update()" class="btn all-btn primary-btn">Update Status</button>
-        </form>
-    </div>
-    <div class="col-md-6" ng-show="mdl.item.current_status=='confirmed'" style="border: 1px solid #EEE">
-        <h1>Assign Inventory</h1>
-        <div ng-repeat="item in mdl.inventories">
-              <div class="row">
-                  <div class="col-sm-1">
-                      <input type="checkbox" ng-model="itm.selected">
-                  </div>
-                  <div class="col-sm-11">
-                      <label>ID:{{item.id}}</label>
-                      <div>{{item.product.name+' '+item.serial_no}}</div>
-                  </div>
-              </div>
-        </div>
-        <div ng-show="mdl.inventories.length==0">
-                <h2>Not inventory available</h2>
-        </div>
-    </div>
-
+<h2 class="black-color">Process Order</h2>
+<!-- <ul class="progress-indicator">
+	<li ng-class="{'completed':mdl.currentStatusIndex>=1}">
+		<span class="bubble"></span>
+		<i class="fa fa-check-circle"></i>
+		Confirmed<br/>
+		<small class="select-color">21 Aug, 2015 03:44:44</small>
+	</li>
+	<li ng-class="{'completed':mdl.currentStatusIndex>=2}">
+		<span class="bubble"></span>
+		<i class="fa fa-check-circle"></i>
+		Approved<br/>
+		<small class="select-color">21 Aug, 2015 03:44:44</small>
+	</li>
+	<li ng-class="{'completed':mdl.currentStatusIndex>=4}">
+		<span class="bubble"></span>
+		<i class="fa fa-check-circle"></i>
+		Ready to Ship
+	</li>
+	<li ng-class="{'completed':mdl.currentStatusIndex>=6}">
+		<span class="bubble"></span>
+		<i class="fa fa-check-circle"></i>
+		Dispatched
+	</li>
+	<li ng-class="{'completed':mdl.currentStatusIndex>=7}">
+		<span class="bubble"></span>
+		<i class="fa fa-check-circle"></i>
+		Delivered
+	</li>
+	<li ng-class="{'completed':mdl.currentStatusIndex>=8}">
+		<span class="bubble"></span>
+		<i class="fa fa-check-circle"></i>
+		End Contract
+	</li>
+</ul> -->
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col col-padding-small no-tpadding hidden-xs">
+	<ul class="progress-indicator process-progress-bar">
+		<li class="active" ng-class="{'completed':mdl.currentStatusIndex>=1}">
+			<span class="bubble"></span>
+			<span class="active-bubble"></span>
+			<p><a href="">1. Confirmed</a></p>
+			<p class="process-date">21 Aug, 2015 03:44:44</p>
+		</li>
+		<li class="" ng-class="{'completed':mdl.currentStatusIndex>=2}">
+			<span class="bubble"></span>
+			<span class="active-bubble"></span>
+			<p><a href="">2. Approved</a></p>
+			<p class="process-date">21 Aug, 2015 03:44:44</p>
+		</li>
+		<li class="" ng-class="{'completed':mdl.currentStatusIndex>=4}">
+			<span class="bubble"></span>
+			<span class="active-bubble"></span>
+			<p><a href="">3. Ready to Ship</a></p>
+		</li>
+		<li class="" ng-class="{'completed':mdl.currentStatusIndex>=6}">
+			<span class="bubble"></span>
+			<span class="active-bubble"></span>
+			<p><a href="">4. Dispatched</a></p>
+		</li>
+		<li class="" ng-class="{'completed':mdl.currentStatusIndex>=7}">
+			<span class="bubble"></span>
+			<span class="active-bubble"></span>
+			<p><a href="">5. Delivered</a></p>
+		</li>
+		<li class="" ng-class="{'completed':mdl.currentStatusIndex>=8}">
+			<span class="bubble"></span>
+			<span class="active-bubble"></span>
+			<p><a href="">6. End Contract</a></p>
+		</li>
+	</ul>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+	<h4 class="no-margin">Current Status: &nbsp<span class="bold-font">{{mdl.item.current_status}}</span></h4>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding">
+	<form ng-show="mdl.item.current_status!='cancelled'">
+		<div class="form-group" style="margin-top: 15px;">
+			<p class="font14" style="margin-bottom: 6px;">Change Order Status</p>
+			<select name="select-product" ng-model="mdl.changedStatus" class="form-control" ng-options="opt as opt.text for opt in mdl.statusOptions"></select>
+		</div>
+		<div class="form-group" style="margin-top: 10px;">
+			<p class="font14" style="margin-bottom: 6px;">Your Message</p>
+			<textarea class="form-control" rows="10" cols="53" ng-model="mdl.comment" placeholder="Update user with your message here"></textarea>
+		</div>
+		<button ladda="buttonLoader" ng-click="mdl.update()" class="btn all-btn primary-btn">Update Status</button>
+		<button ladda="buttonLoader" ng-click="mdl.cancel()" class="btn all-btn primary-btn">Cancel</button>
+	</form>
+</div>
+<div class="col-md-6" ng-show="mdl.item.current_status=='confirmed'" style="border: 1px solid #EEE">
+	<h1>Assign Inventory</h1>
+	<div ng-repeat="item in mdl.inventories">
+		<div class="row">
+			<div class="col-sm-1">
+				<input type="checkbox" ng-model="itm.selected">
+			</div>
+			<div class="col-sm-11">
+				<label>ID:{{item.id}}</label>
+				<div>{{item.product.name+' '+item.serial_no}}</div>
+			</div>
+		</div>
+	</div>
+	<div ng-show="mdl.inventories.length==0">
+		<h2>Not inventory available</h2>
+	</div>
 </div>
 
 <!--<button ui-sref="main.sellerAccount.orders.process">Process</button>
