--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -7204,3 +7204,88 @@ section {
     font-size: 16px;
   }
 }
+
+
+@-webkit-keyframes mask-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(325px);
+            transform: translateX(325px);
+  }
+}
+@keyframes mask-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(325px);
+            transform: translateX(325px);
+  }
+}
+@-webkit-keyframes mask-inner-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-325px);
+            transform: translateX(-325px);
+  }
+}
+@keyframes mask-inner-move {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-325px);
+            transform: translateX(-325px);
+  }
+}
+
+.focus {
+  font-size: 26px;
+  color: #000;
+  letter-spacing: 0;
+  line-height: 1;
+  position: relative;
+  width: 425px;
+  text-align: center;
+  margin: 0 auto;
+}
+.focus:before {
+  content: 'Excavating Awesomeness';
+  -webkit-filter: blur(3px);
+          filter: blur(3px);
+}
+.focus:after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: calc(100% + 8px);
+  top: -4px;
+  left: 0;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  -webkit-animation: mask-move 3s linear infinite alternate;
+          animation: mask-move 3s linear infinite alternate;
+}
+.focus--mask {
+  overflow: hidden;
+  position: absolute;
+  width: 50px;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #fff;
+  -webkit-animation: mask-move 3s linear infinite alternate;
+          animation: mask-move 3s linear infinite alternate;
+}
+.focus--mask-inner {
+  -webkit-animation: mask-inner-move 3s linear infinite alternate;
+          animation: mask-inner-move 3s linear infinite alternate;
+}
