landing icon changes, active review tab, write a review form, cart changes, checkout flow changes, other changes

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3476,7 +3476,7 @@ ul.search-tabs {
 }
 
 .overall-rating {
-  padding: 25px 30px;
+  padding: 45px 30px;
   .star-rating {
     margin-bottom: 20px;
     .five-stars-container { font-size: 3em; line-height: 1em; float: left; }
@@ -6110,7 +6110,7 @@ section {
         // vertical-align: middle;
         h4 {
           font-weight: 600;
-          margin-bottom: 5px;
+          margin-bottom: 8px;
           color: $primary-orange-color;
         }
         p {
@@ -6120,11 +6120,14 @@ section {
             margin-bottom: 5px;
           }
           &:last-child {
-            margin-top: 8px;
+            margin-top: 4px;
             margin-bottom: 0;
-            color: #009ddc;
             text-align: right;
             a {
+              color: #009ddc;
+              &:hover {
+                color: $primary-hover-color;
+              }
               &:last-child {
                 // margin-left: 30px;
               }
@@ -6138,7 +6141,7 @@ section {
       }
       .qty-td {
         border-right: 1px solid #eeeeee;
-        width: 10%;
+        width: 15%;
         // vertical-align: middle;
       }
       .details-td {
@@ -6167,7 +6170,7 @@ section {
   .total-amount-pay {
     padding-top: 10px;
     padding-bottom: 5px;
-    padding-right: 8%;
+    padding-right: 7%;
   }
   p {
     text-align: right;
@@ -6243,18 +6246,18 @@ section {
   p {
     color: $primary-orange-color;
   }
-  }.progress-indicator>li.completed,.progress-indicator>li.completed .bubble{color:#009CA3}.progress-indicator>li .bubble{border-radius:1000px;width:20px;height:20px;background-color:#A6AAA9;display:block;margin:0 auto .5em;border-bottom:1px solid #888}.progress-indicator>li .bubble:after,.progress-indicator>li .bubble:before{display:block;position:absolute;top:9px;width:100%;height:3px;content:'';background-color:#A6AAA9}.progress-indicator>li.completed .bubble,.progress-indicator>li.completed .bubble:after,.progress-indicator>li.completed .bubble:before{background-color:#009CA3;border-color:#247830}.progress-indicator>li .bubble:before{left:0}.progress-indicator>li .bubble:after{right:0}.progress-indicator>li.active,.progress-indicator>li.active .bubble{color:#A6AAA9}.progress-indicator>li.active .bubble,.progress-indicator>li.active .bubble:after,.progress-indicator>li.active .bubble:before{background-color:#A6AAA9;border-color:#122a3f}.progress-indicator>li a:hover .bubble,.progress-indicator>li a:hover .bubble:after,.progress-indicator>li a:hover .bubble:before{background-color:#5671d0;border-color:#1f306e}.progress-indicator>li a:hover .bubble{color:#5671d0}.progress-indicator>li.danger .bubble,.progress-indicator>li.danger .bubble:after,.progress-indicator>li.danger .bubble:before{background-color:#d3140f;border-color:#440605}.progress-indicator>li.danger .bubble{color:#d3140f}.progress-indicator>li.warning .bubble,.progress-indicator>li.warning .bubble:after,.progress-indicator>li.warning .bubble:before{background-color:#edb10a;border-color:#5a4304}.progress-indicator>li.warning .bubble{color:#edb10a}.progress-indicator>li.info .bubble,.progress-indicator>li.info .bubble:after,.progress-indicator>li.info .bubble:before{background-color:#5b32d6;border-color:#25135d}.progress-indicator>li.info .bubble{color:#5b32d6}.progress-indicator.stacked>li{text-indent:-10px;text-align:center;display:block}.progress-indicator.stacked>li .bubble:after,.progress-indicator.stacked>li .bubble:before{left:50%;margin-left:-1.5px;width:3px;height:100%}.progress-indicator.stacked .stacked-text{position:relative;z-index:10;top:0;margin-left:60%!important;width:45%!important;display:inline-block;text-align:left;line-height:1.2em}.progress-indicator.stacked>li a{border:none}.progress-indicator.stacked.nocenter>li .bubble{margin-left:0;margin-right:0}.progress-indicator.stacked.nocenter>li .bubble:after,.progress-indicator.stacked.nocenter>li .bubble:before{left:10px}.progress-indicator.stacked.nocenter .stacked-text{width:auto!important;display:block;margin-left:40px!important}@media handheld,screen and (max-width:400px){.progress-indicator{font-size:60%}}
+  }.progress-indicator>li.completed,.progress-indicator>li.completed .bubble{color:#009CA3}.progress-indicator>li .bubble{border-radius:1000px;width:20px;height:20px;background-color:$primary-orange-color;display:block;margin:0 auto .5em;border-bottom:1px solid $primary-orange-color}.progress-indicator>li .bubble:after,.progress-indicator>li .bubble:before{display:block;position:absolute;top:9px;width:100%;height:3px;content:'';background-color:$primary-orange-color}.progress-indicator>li.completed .bubble,.progress-indicator>li.completed .bubble:after,.progress-indicator>li.completed .bubble:before{background-color:#009CA3;border-color:#247830}.progress-indicator>li .bubble:before{left:0}.progress-indicator>li .bubble:after{right:0}.progress-indicator>li.active,.progress-indicator>li.active .bubble{color:#A6AAA9}.progress-indicator>li.active .bubble,.progress-indicator>li.active .bubble:after,.progress-indicator>li.active .bubble:before{background-color:#C5C5C5;border-color:#122a3f}.progress-indicator>li a:hover .bubble,.progress-indicator>li a:hover .bubble:after,.progress-indicator>li a:hover .bubble:before{background-color:#5671d0;border-color:#1f306e}.progress-indicator>li a:hover .bubble{color:#5671d0}.progress-indicator>li.danger .bubble,.progress-indicator>li.danger .bubble:after,.progress-indicator>li.danger .bubble:before{background-color:#d3140f;border-color:#440605}.progress-indicator>li.danger .bubble{color:#d3140f}.progress-indicator>li.warning .bubble,.progress-indicator>li.warning .bubble:after,.progress-indicator>li.warning .bubble:before{background-color:#edb10a;border-color:#5a4304}.progress-indicator>li.warning .bubble{color:#edb10a}.progress-indicator>li.info .bubble,.progress-indicator>li.info .bubble:after,.progress-indicator>li.info .bubble:before{background-color:#5b32d6;border-color:#25135d}.progress-indicator>li.info .bubble{color:#5b32d6}.progress-indicator.stacked>li{text-indent:-10px;text-align:center;display:block}.progress-indicator.stacked>li .bubble:after,.progress-indicator.stacked>li .bubble:before{left:50%;margin-left:-1.5px;width:3px;height:100%}.progress-indicator.stacked .stacked-text{position:relative;z-index:10;top:0;margin-left:60%!important;width:45%!important;display:inline-block;text-align:left;line-height:1.2em}.progress-indicator.stacked>li a{border:none}.progress-indicator.stacked.nocenter>li .bubble{margin-left:0;margin-right:0}.progress-indicator.stacked.nocenter>li .bubble:after,.progress-indicator.stacked.nocenter>li .bubble:before{left:10px}.progress-indicator.stacked.nocenter .stacked-text{width:auto!important;display:block;margin-left:40px!important}@media handheld,screen and (max-width:400px){.progress-indicator{font-size:60%}}
 
 .progress-indicator>li.active .active-bubble {
     border-radius: 1000px;
     width: 12px;
     height: 12px;
-    background-color: #009cA3;
+    background-color: #C5C5C5;
     /* display: block; */
     top: 0;
     position: absolute;
     margin: 0 auto .5em;
-    border-bottom: 1px solid #888;
+    border-bottom: 1px solid #C5C5C5;
     margin-top: 4px;
     margin-left: -5.8px;
 }
@@ -6821,7 +6824,7 @@ section {
   bottom: 0;
   left: 0;
   z-index: 1100;
-  background-color: rgba(255,255,255,.8) !important;
+  background-color: rgba(255,255,255,.9) !important;
   display: flex;
   flex-wrap: wrap !important;
   align-items: center !important;
@@ -6975,7 +6978,7 @@ section {
     position: absolute;
     right: 11px;
     margin-top: 11px;
-    font-size: 13px;
+    font-size: 18px;
     background-color: $white-theme-color;
     color: $primary-color;
     cursor: pointer;
@@ -7113,10 +7116,11 @@ section {
           text-overflow: ellipsis;
           overflow: hidden;
           white-space: nowrap;
+          margin-top: 4px;
           p {
             color: #838383;
             font-weight: 600;
-            margin-top: 7px;
+            margin-top: 10px;
             margin-bottom: 0;
             font-size: 13px;
           }
@@ -7165,7 +7169,7 @@ section {
   z-index: 1;
   width: 100%;
   text-align: center;
-  background: rgba(255,255,255,.8);
+  background: rgba(255,255,255,.9);
   height: 100%;
   margin-left: -15px;
   padding-top: 6.8%;
@@ -7253,7 +7257,7 @@ section {
   letter-spacing: 0;
   line-height: 1;
   position: relative;
-  width: 425px;
+  width: 375px;
   text-align: center;
   margin: 0 auto;
 }
@@ -7288,4 +7292,31 @@ section {
 .focus--mask-inner {
   -webkit-animation: mask-inner-move 3s linear infinite alternate;
           animation: mask-inner-move 3s linear infinite alternate;
+}
+
+.features-icons {
+  border: 1px solid;
+  width: 1.8em;
+  height: 1.8em;
+  line-height: 1.6em !important;
+  border-radius: 50% 50% 50% 50%;
+  display: inline-block;
+  text-align: center;
+  &:before {
+    font-size: 24px;
+  }
+}
+
+.success-msg {
+  background-color: rgba(0, 128, 0, 0.6) !important;
+  color: $white-theme-color !important;
+  &:before {
+    content: "\f00c" !important;
+    font-family: FontAwesome;
+    border: 1px solid $white-theme-color !important;
+    font-size: 16px;
+  }
+  .close {
+    color: $white-theme-color !important;
+  }
 }
