--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -207,7 +207,7 @@
 						<p class="hidden-xs">Explore more than 3000 equipments online for your infrastructure projects</p>
 					</div>
 					<div class="icon-wrapper animated slideInLeft" data-animation-type="slideInLeft" data-animation-delay="0" style= "animation-delay: 0s">
-						<i class="soap-icon-beach circle"></i>
+						<i class="fa fa-list-alt circle features-icons"></i>
 					</div>
 				</div>
 				<div class="process second icon-box style12">
@@ -234,7 +234,7 @@
 						<p class="hidden-xs">Reserve Equipments to use directly onsite and get it delivered to your jobsite</p>
 					</div>
 					<div class="icon-wrapper animated slideInLeft" data-animation-type="slideInLeft" data-animation-delay="3.5" style= "animation-delay: 3.5s">
-						<i class="soap-icon-plane-left takeoff-effect1 circle"></i>
+						<i class="fa fa-check-square-o circle features-icons"></i>
 					</div>
 				</div>
 			</div>
