--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -341,7 +341,7 @@
 		</div> -->
 		<section id="content" class="gray-area">
 			<div class="container">
-				<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}}">
+				<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}} success-msg">
 					{{rmodel.message.text}}
 					<span class="close" ng-click="rmodel.message.show=false"></span>
 				</div>
