--- a/src/app/views/seller-account/equipments/list/list.html
+++ b/src/app/views/seller-account/equipments/list/list.html
@@ -57,7 +57,7 @@
 						<p>
 							<!-- <button class="btn all-btn primary-btn">View</button> -->
 							<a ui-sref="main.equiDetails({id:pro.id})" class="btn all-btn white-btn">
-								View
+								Preview
 							</a>
 							<a ng-click="edit(pro)" class="btn all-btn white-btn">
 								Edit
