--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -118,6 +118,7 @@ img.full-width { height: auto; }
 .default-color { color: inherit !important; }
 .gray-color { color: #9e9e9e !important; }
 .black-color {color: $black-color !important;}
+.primary-color {color: $primary-color !important;}
 
 .hotel-color { color: $skin-active-color; }
 .select-color { color: $skin-select-color; }
@@ -212,6 +213,7 @@ img.full-width { height: auto; }
   &:hover {
     background-color: $primary-button-color;
     color: $white-theme-color;
+    border: 1px solid $primary-button-color;
   }
 }
 
