--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -12,7 +12,7 @@
 			<li active-state="main.account.orders" ui-sref="main.account.orders.list" ng-click="closeDashboard()"><a><i class="soap-icon-bag circle"></i>Orders</a></li>
 			<li active-state="main.account.favorites" ui-sref="main.account.favorites" ng-click="closeDashboard()"><a><i class="soap-icon-businessbag circle"></i>Favorites</a></li>
 			<li active-state="main.account.invoices" ui-sref="main.account.invoices.list" ng-click="closeDashboard()"><a><i class="soap-icon-card circle"></i>Invoices</a></li>
-			<li active-state="main.account.inquiries" ui-sref="main.account.inquiries.list" ng-click="closeDashboard()"><a><i class="soap-icon-card circle"></i>Enquiry</a></li>
+			<!-- <li active-state="main.account.inquiries" ui-sref="main.account.inquiries.list" ng-click="closeDashboard()"><a><i class="soap-icon-card circle"></i>Enquiry</a></li> -->
 			<li active-state="main.account.jobsites"   ui-sref="main.account.jobsites.list" ng-click="closeDashboard()"><a><i class="soap-icon-departure circle"></i>Jobsites</a></li>
 			<!-- <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li> -->
 			<!-- <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Equipments</a></li> -->
