--- a/src/app/views/account/inquiries/inquiries.html
+++ b/src/app/views/account/inquiries/inquiries.html
@@ -2,6 +2,6 @@
 <button ui-sref="main.sellerAccount.inquiries.view({id:0})">View</button>
 <button ui-sref="main.sellerAccount.inquiries.list">List</button>-->
 
-<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm">
+<div id="booking" class="tab-pane fade in col-padding-small col-padding-sm col-lg-12 white-bg" style="margin-top: 30px; padding-top: 15px; padding-bottom: 15px;">
     <ui-view></ui-view>
 </div>
