--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -729,7 +729,7 @@
             <p></p>
             <a ladda="loadButton" ng-click="addToFavorite()" class="btn full-width small-btn primary-btn">Add to Favourites</a>
             <p></p>
-            <a ui-sref="main.sellerAccount.inquiries.new({id:mdl.equi.id})" class="btn full-width small-btn primary-btn">Send Inquiry</a>
+            <a ui-sref="main.inquiries.new({id:mdl.equi.id})" class="btn full-width small-btn primary-btn">Send Inquiry</a>
 
         </div>
     </article>
