--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -45,7 +45,7 @@
 								</a>
 							</li>
 							<li class="not-user notification-li" ng-if="isLoggedIn()">
-								<a ui-sref="main.inquiries">
+								<a ui-sref="main.inquiries.list">
 									<i class="fa fa-envelope-o big-font hidden-xs"></i>
 									<span class="visible-xs">Messages</span>
 									<div class="notification hidden-xs">2</div>
