--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -1,10 +1,10 @@
-<div class="loader-div" loader>
+<div class="loaderDiv" loader>
     <img src="assets/images/loader.gif"/>
     <p>Excavating Awesomeness</p>
 </div>
 <!-- <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;"> -->
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
-	<h1 class="no-margin black-color seller-heading-font">Enquiries</h1>
+	<h1 class="no-margin black-color seller-heading-font">Inquiries</h1>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 		<i class="fa fa-search" ng-click="searchBar()"></i>
 		<input type="text" placeholder="Search" class="form-control" ng-model="mdl.searchText">
@@ -55,7 +55,7 @@
 					<p class="no-margin heading-text orange-text font-italic">{{item.subject}}</p>
 				</td>
 				<td class="text-right">
-					<button class="btn all-btn view-btn white-btn" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
+					<button class="btn all-btn view-btn white-btn" ui-sref="main.inquiries.view({id:item.id})">View</button>
 					<a href="" class="desc-text orange-text btn-right">Mark as read</a>
 				</td>
 			</tr>
@@ -65,7 +65,7 @@
 		<div class="col-xs-12 no-padding mobile-inquiry-list" ng-repeat="item in mdl.items |filter:{ subject : mdl.searchText}">
 			<p class="heading-text">Jessica Brown</p>
 			<p class="heading-text orange-text font-italic">{{item.subject}}</p>
-			<button class="btn all-btn view-btn white-btn pull-left" ui-sref="main.account.inquiries.view({id:item.id})">View</button>
+			<button class="btn all-btn view-btn white-btn pull-left" ui-sref="main.inquiries.view({id:item.id})">View</button>
 			<a href="" class="desc-text orange-text pull-right">Mark as read</a>
 		</div>
 	</div>
