--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -160,7 +160,7 @@
 									</a>
 								</li>
 								<li class="not-user notification-li" ng-if="isLoggedIn()">
-									<a ui-sref="main.inquiries" class="for-sm">
+									<a ui-sref="main.inquiries.list" class="for-sm">
 										<i class="fa fa-envelope-o big-font hidden-xs"></i>
 										<span class="visible-xs">Messages</span>
 										<div class="notification hidden-xs">2</div>
