--- a/src/app/views/seller-account/seller-account.html
+++ b/src/app/views/seller-account/seller-account.html
@@ -13,7 +13,7 @@
      	<li active-state="main.sellerAccount.inventory" ui-sref="main.sellerAccount.inventory.list" ng-click="closeDashboard()"><a>Inventory</a></li>
       <li active-state="main.sellerAccount.orders"    ui-sref="main.sellerAccount.orders.list" ng-click="closeDashboard()"><a>Order Received </a></li>
       <li active-state="main.sellerAccount.invoices"  ui-sref="main.sellerAccount.invoices.list" ng-click="closeDashboard()"><a>Invoices</a></li>
-      <li active-state="main.sellerAccount.inquiries" ui-sref="main.sellerAccount.inquiries.list" ng-click="closeDashboard()"><a>Enquiry</a></li>
+      <!-- <li active-state="main.sellerAccount.inquiries" ui-sref="main.sellerAccount.inquiries.list" ng-click="closeDashboard()"><a>Enquiry</a></li> -->
       <li active-state="main.sellerAccount.settings"  ui-sref="main.sellerAccount.settings.general" ng-click="closeDashboard()"><a>Settings</a></li>
     </ul>
   </div>
