--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -614,12 +614,12 @@
             <div class="form-group col-md-12 no-float no-padding write-review-div">
                 <h4 class="title">Title of your review</h4>
                 <input type="text" name="review-title" class="form-control" value=""
-                       placeholder="Enter a review title"/>
+                       placeholder="Enter a review title" ng-model="mdl.equi.reviewTitle"/>
             </div>
             <div class="form-group write-review-div">
                 <h4 class="title">Your review</h4>
                 <textarea class="form-control" placeholder="Enter your review (minimum 200 characters)"
-                          rows="5"></textarea>
+                          rows="5" ng-model="mdl.equi.reviewContent"></textarea>
             </div>
             <!-- <div class="form-group write-review-div">
                 <h4 class="title">What was best thing you like in Renting Journey with us?</h4>
@@ -631,7 +631,7 @@
                     <li><a  ><i class="soap-icon-user circle"></i></a><span>Ease of Ordering</span></li>
                 </ul>
             </div> -->
-            <div class="form-group col-md-12 no-float no-padding write-review-div">
+            <!--<div class="form-group col-md-12 no-float no-padding write-review-div">
                 <h4 class="title">When did you Rented Equipment?</h4>
                     <select class="form-control">
                         <option value="2014-6">June 2014</option>
@@ -642,7 +642,7 @@
                         <option value="2014-11">November 2014</option>
                         <option value="2014-12">December 2014</option>
                     </select>
-            </div>
+            </div>-->
 
             <!-- <div class="form-group col-md-12 no-float no-padding write-review-div">
                 <h4 class="title">Do you have site photos to share?
