--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -12,7 +12,7 @@
 				<div class="fact blue dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
-							<dt class="display-counter" data-value="3200">0</dt>
+							<dt class="display-counter" data-value="3200">{{mdl.rentedCount}}</dt>
 							<dd>Rented</dd>
 						</dl>
 						<i class="fa fa-calendar-check-o"></i>
