--- a/src/app/views/account/inquiries/new/new.html
+++ b/src/app/views/account/inquiries/new/new.html
@@ -1,3 +1,7 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif"/>
+    <p>Excavating Awesomeness</p>
+</div>
 <div class="booking-information travelo-box" style="margin-bottom: 0px;">
     <div>
         <button class="btn all-btn primary-btn" ng-click="back()"><i class="fa fa-chevron-left"></i>&nbsp Back</button>
